logs/async-task-processor.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/async_task_processor'...
Listing './lib/python3.5/site-packages/async_task_processor/atp'...
Listing './lib/python3.5/site-packages/async_task_processor/exceptions'...
Listing './lib/python3.5/site-packages/async_task_processor/primitives'...
Listing './lib/python3.5/site-packages/async_task_processor/processors'...
Listing './lib/python3.5/site-packages/async_task_processor-0.2.4.egg-info'...
Listing './lib/python3.5/site-packages/asynctnt'...
Listing './lib/python3.5/site-packages/asynctnt/iproto'...
Listing './lib/python3.5/site-packages/asynctnt-0.1.11.egg-info'...
Listing './lib/python3.5/site-packages/asynctnt_queue'...
Listing './lib/python3.5/site-packages/asynctnt_queue-0.0.5.egg-info'...
Listing './lib/python3.5/site-packages/examples'...
Compiling './lib/python3.5/site-packages/examples/tarantool_processor.py'...
***   File "./lib/python3.5/site-packages/examples/tarantool_processor.py", line 37
    [await tube.put(dict(num=i, first_name='Jon', last_name='Smith')) for i in range(messages_count)]
    ^
SyntaxError: 'await' expressions in comprehensions are not supported

Compiling './lib/python3.5/site-packages/examples/tarantool_processor_manage_workers.py'...
***   File "./lib/python3.5/site-packages/examples/tarantool_processor_manage_workers.py", line 40
    [await tube.put(dict(num=i, first_name='Jon', last_name='Smith')) for i in range(messages_count)]
    ^
SyntaxError: 'await' expressions in comprehensions are not supported

Listing './lib/python3.5/site-packages/janus'...
Listing './lib/python3.5/site-packages/janus-0.3.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/uvloop'...
Listing './lib/python3.5/site-packages/uvloop/handles'...
Listing './lib/python3.5/site-packages/uvloop/includes'...
Listing './lib/python3.5/site-packages/uvloop-0.9.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
